# sudoku_rl

./: AGENTS.md  README.md  pyproject.toml
data/processed/: sudoku_bins_manifest.json  sudoku_zeros_04_07.csv  sudoku_zeros_08_11.csv  sudoku_zeros_12_15.csv  sudoku_zeros_16_19.csv  sudoku_zeros_56_59.csv  sudoku_zeros_60_63.csv
experiments/: distance_calibrator.json  distance_regressor.pt
experiments/1764193513/: model_000200.pt  model_000400.pt  model_000600.pt  model_000658.pt  trainer_state.pt
experiments/1764194278/: model_000200.pt  model_000400.pt  model_000600.pt  model_000658.pt  trainer_state.pt
experiments/1764196892/: model_000200.pt  model_000400.pt  trainer_state.pt
experiments/1764265795/: trainer_state.pt
experiments/last_entropy_run/: model_000200.pt
notebooks/: entropy_reward_diagnostics.ipynb
notebooks/.ipynb_checkpoints/: entropy_reward_diagnostics-checkpoint.ipynb
notebooks/experiments/: distance_calibrator.json
runs/sudoku/: events.out.tfevents.1764191565.d63eb4736659.2385.0  events.out.tfevents.1764193513.d63eb4736659.6661.0  events.out.tfevents.1764260817.788d857ea328.9269.0  events.out.tfevents.1764261748.788d857ea328.10002.0  events.out.tfevents.1764262036.788d857ea328.10316.0  events.out.tfevents.1764263234.788d857ea328.10588.0  (+24 more)
scripts/: build_distance_calibrator.py  create_filtered_dataset_sudoku.py  print_profile.py  train_distance_regressor.py
tests/: test_curriculum.py  test_entropy.py  test_entropy_fast.py  test_entropy_vectorized.py  test_env.py  test_mask_fast.py  test_mask_torch.py  test_puzzle.py
(+35 files in other folders)
