[tool.poetry]
name = "sudoku-rl"
version = "0.1.0"
description = ""
authors = ["SFYLL <sd@seismic.systems>"]
readme = "README.md"
packages = [{ include = "sudoku_rl", from = "src" }]

[tool.poetry.dependencies]
python = "3.11.*"
pufferlib = "^3.0.0"
torch = "*"
numpy = "*"
tensorboard = "*"
imageio = "^2.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
